@startuml

class Grilla {
    + avanzar(vehiculo: Vehiculo, direccion: String)
}

abstract class Vehiculo {
    # posicion: int
    # movimientos: int
    + posicion(): int
    + trasladar(): void
    + {abstract} pasarPor(obstaculo: Penalizador)
}

class Moto {
    + pasarPor(obstaculo: Penalizador)
}

class Auto {
    + pasarPor(obstaculo: Penalizador)
}

class Auto4x4 {
    - contadorPozos: int
    + pasarPor(obstaculo: Penalizador)
}

class Posicion {
    - x: int
    - y: int
    - instances: Instances[]
    + getPosicion(x: int, y: int)
    + trasladar(posicionNueva: Posicion): Posicion
    + sonIguales(posicion: Posicion): bool
}

interface Movimiento {
    + {abstract} trasladar(posicion: Posicion): Posicion
}

class Arriba {
    + trasladar(posicion: Posicion): Posicion
}

class Izquierda {
    + trasladar(posicion: Posicion): Posicion
}

class Derecha {
    + trasladar(posicion: Posicion): Posicion
}

class Abajo {
    + trasladar(posicion: Posicion): Posicion
}

abstract class IObstaculo {
    + {abstract} tieneMismaPosicion(posicion: Posicion)
}

interface Penalizador {
    + {abstract} tieneLaMismaPosicion(posicion:int)
    + {abstract} penalizar(moto: Moto)
    + {abstract} penalizar(auto: Auto)
    + {abstract} penalizar(auto4x4: Auto4x4)
}

class Pozo {
    + tieneLaMismaPosicion(posicion:int)
    + penalizar(moto: Moto)
    + penalizar(auto: Auto)
    + penalizar(auto4x4: Auto4x4)
}

class Piquete {
    + tieneLaMismaPosicion(posicion:int)
    + penalizar(moto: Moto)
    + penalizar(auto: Auto)
    + penalizar(auto4x4: Auto4x4)
}

class ControlPolicial {
    + tieneLaMismaPosicion(posicion:int)
    + penalizar(moto: Moto)
    + penalizar(auto: Auto)
    + penalizar(auto4x4: Auto4x4)
}

class Sorpresa {
    - tipoSorpresa: String
    + aplicarBonificacion(vehiculo: Vehiculo)
    + aplicarDescuento(vehiculo: Vehiculo)
    + aplicarCambioVehiculo(vehiculo: Vehiculo)
}

Grilla ..> Vehiculo
Grilla *-- "0..*" Penalizador
Grilla *-- "0..*" Sorpresa

Vehiculo <|-- Moto
Vehiculo <|-- Auto
Vehiculo <|-- Auto4x4

Vehiculo *-- Posicion
Vehiculo *-- Movimiento

Penalizador <|.. Pozo
Penalizador <|.. Piquete
Penalizador <|.. ControlPolicial

Movimiento <|.. Arriba
Movimiento <|.. Abajo
Movimiento <|.. Izquierda
Movimiento <|.. Derecha

Movimiento ..> Posicion

@enduml
